stylesheets/main.css
html, body {
	height: 100%;
	font-family: Arial, Helvetica, sans-serif;
	margin: 0;
	width: 100%;
	display:inline-block;
}

/* green submit button */
#green {
	align: left;
	background-color: green;
	color: white;
	border-radius: 5px;
	text-align: center;
	width: 100%;

}

input {
	border-radius: 5px;
}

textarea {
	border-radius: 5px;
	width: 95%;
}

select {
	border-radius: 5px;
}
a {
	color: #000001;
}

.container {
	margin: 2%;
}

.flex-container {
  	display: flex;
  	flex-flow: row wrap;
  	justify-content: space-around;
  	flex-direction: column;
  	width: 80%;   
  	padding: 5%;
  	margin: 2%;
  	list-style: none;
  	align: center;
}

.flex-item {
 	height: 3rem;

	/*
  	padding: 1rem;
  	width: 1rem;
  	margin-top: 1rem;
  	line-height: 1rem;*/
  	text-align: left;
  	width: 100%;
  	padding-bottom: 10%;
  	margin-bottom: 5%;
}

.flex-item > input {
	height: 2rem;
	width: 100%;
}

.flex-item > select {
	height: 2rem;
	width: 100%;
}


@media (min-width: 501px) {
	.flex-container {
        flex-direction: row;
    }
    .flex-item {
	  	width: 40%;
	  	padding-bottom: 5%;
	}

	#description-area {
		border-radius: 5px;
		width: 100%;
		margin-left: 5%;
		margin-bottom: 5%;
	}    
}

